--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>App Store | jonasclaes.be</title>
   </head>
   <body>
-    <div id="app" class="h-screen w-screen"></div>
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
